--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
 <body>
 <canvas id="screen" width="100" height="100"></canvas>
 
+<script src="js/render/Sprite.js"></script>
 <script src="js/render/SceneManager.js"></script>
 <script src="js/render/Scene.js"></script>
 <script src="js/render/Transition.js"></script>
