--- a/www/index.html
+++ b/www/index.html
@@ -9,11 +9,13 @@
 <body>
 <canvas id="screen" width="100" height="100"></canvas>
 
+<script src="js/render/Drawable.js"></script>
+<script src="js/render/Path.js"></script>
 <script src="js/render/AnimationStudio.js"></script>
 <script src="js/render/AnimationStudioManager.js"></script>
 <script src="js/render/Sprite.js"></script>
-<script src="js/render/SceneManager.js"></script>
-<script src="js/render/Scene.js"></script>
+<script src="js/render/MotionStudioManager.js"></script>
+<script src="js/render/MotionStudio.js"></script>
 <script src="js/render/Transition.js"></script>
 <script src="js/screen/ResizeHandler.js"></script>
 <script src="js/screen/ScreenSizer.js"></script>
