--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
 <body>
 <canvas id="screen" width="100" height="100"></canvas>
 
+<script src="js/input/TapController.js"></script>
 <script src="js/render/Drawable.js"></script>
 <script src="js/render/Path.js"></script>
 <script src="js/render/AnimationStudio.js"></script>
