dependency for sprites

--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
 <script src="js/render/AnimationStudio.js"></script>
 <script src="js/render/AnimationDirector.js"></script>
 <script src="js/render/Sprite.js"></script>
+<script src="js/render/Sprites.js"></script>
 <script src="js/render/StageDirector.js"></script>
 <script src="js/render/MotionDirector.js"></script>
 <script src="js/render/MotionStudio.js"></script>
