static factory method for drawables

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
 <script src="js/input/PushReleaseController.js"></script>
 <script src="js/input/TapController.js"></script>
 <script src="js/render/Drawable.js"></script>
+<script src="js/render/Drawables.js"></script>
 <script src="js/render/Path.js"></script>
 <script src="js/render/AnimationStudio.js"></script>
 <script src="js/render/AnimationDirector.js"></script>
