path creation refactoring into static factory method

--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
 <script src="js/render/Drawable.js"></script>
 <script src="js/render/Drawables.js"></script>
 <script src="js/render/Path.js"></script>
+<script src="js/render/Paths.js"></script>
 <script src="js/render/AnimationStudio.js"></script>
 <script src="js/render/AnimationDirector.js"></script>
 <script src="js/render/Sprite.js"></script>
