introduced scene manager for scene handling + little package refactoring in render module

--- a/www/index.html
+++ b/www/index.html
@@ -11,24 +11,33 @@
 
 <script src="js/input/PushReleaseController.js"></script>
 <script src="js/input/TapController.js"></script>
-<script src="js/render/Drawable.js"></script>
-<script src="js/render/Drawables.js"></script>
-<script src="js/render/Path.js"></script>
-<script src="js/render/Paths.js"></script>
-<script src="js/render/AnimationStudio.js"></script>
-<script src="js/render/AnimationDirector.js"></script>
-<script src="js/render/Sprite.js"></script>
-<script src="js/render/Sprites.js"></script>
-<script src="js/render/StageDirector.js"></script>
-<script src="js/render/MotionDirector.js"></script>
-<script src="js/render/MotionStudio.js"></script>
-<script src="js/render/Transition.js"></script>
+<script src="js/render/entity/Drawable.js"></script>
+<script src="js/render/entity/Drawables.js"></script>
+<script src="js/render/entity/Path.js"></script>
+<script src="js/render/entity/Paths.js"></script>
+<script src="js/render/control/AnimationStudio.js"></script>
+<script src="js/render/control/AnimationDirector.js"></script>
+<script src="js/render/entity/Sprite.js"></script>
+<script src="js/render/entity/Sprites.js"></script>
+<script src="js/render/api/StageDirector.js"></script>
+<script src="js/render/control/MotionDirector.js"></script>
+<script src="js/render/control/MotionStudio.js"></script>
+<script src="js/render/api/Transition.js"></script>
+<script src="js/scene/GetReady.js"></script>
+<script src="js/scene/Intro.js"></script>
+<script src="js/scene/KillScreen.js"></script>
+<script src="js/scene/PlayGame.js"></script>
+<script src="js/scene/PostGame.js"></script>
+<script src="js/scene/PreGame.js"></script>
+<script src="js/scene/StartingPosition.js"></script>
+<script src="js/scene/Tutorial.js"></script>
+<script src="js/scene/SceneManager.js"></script>
 <script src="js/screen/ResizeHandler.js"></script>
 <script src="js/screen/ScreenSizer.js"></script>
 <script src="js/screen/ResizeBus.js"></script>
-<script src="js/render/SubImage.js"></script>
-<script src="js/render/AtlasMapper.js"></script>
-<script src="js/render/Renderer.js"></script>
+<script src="js/render/entity/SubImage.js"></script>
+<script src="js/render/control/AtlasMapper.js"></script>
+<script src="js/render/control/Renderer.js"></script>
 <script src="js/screen/SimpleLoadingScreen.js"></script>
 <script src="js/net/ResourceLoader.js"></script>
 <script src="js/GameLoop.js"></script>
