--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,9 @@
 <body>
 <canvas id="screen" width="100" height="100"></canvas>
 
+<script src="js/platform/requestAnimationFrame.js"></script>
+<script src="js/platform/BrowserOracle.js"></script>
+<script src="js/platform/FullScreenController.js"></script>
 <script src="js/input/PushReleaseController.js"></script>
 <script src="js/input/TapController.js"></script>
 <script src="js/render/entity/Drawable.js"></script>
