--- a/www/index.html
+++ b/www/index.html
@@ -5,10 +5,17 @@
     <title>Crappy Space Miner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/app.css">
+    <!--<style type="text/css">-->
+        <!--@font-face {-->
+            <!--font-family: 'scheisse';-->
+            <!--src: url('data/kenpixel_blocks.woff') format('woff');-->
+        <!--}-->
+    <!--</style>-->
 </head>
 <body>
 <canvas id="screen" width="100" height="100"></canvas>
 
+<script src="js/platform/addFontToDOM.js"></script>
 <script src="js/platform/requestAnimationFrame.js"></script>
 <script src="js/platform/BrowserOracle.js"></script>
 <script src="js/platform/FullScreenController.js"></script>
