--- a/www/index.html
+++ b/www/index.html
@@ -5,34 +5,30 @@
     <title>Crappy Space Miner</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/app.css">
-    <!--<style type="text/css">-->
-        <!--@font-face {-->
-            <!--font-family: 'scheisse';-->
-            <!--src: url('data/kenpixel_blocks.woff') format('woff');-->
-        <!--}-->
-    <!--</style>-->
 </head>
 <body>
 <canvas id="screen" width="100" height="100"></canvas>
 
+<script src="js/platform/UniversalTranslator.js"></script>
 <script src="js/platform/addFontToDOM.js"></script>
 <script src="js/platform/requestAnimationFrame.js"></script>
 <script src="js/platform/BrowserOracle.js"></script>
 <script src="js/platform/FullScreenController.js"></script>
 <script src="js/input/PushReleaseController.js"></script>
 <script src="js/input/TapController.js"></script>
-<script src="js/render/entity/Drawable.js"></script>
-<script src="js/render/entity/Drawables.js"></script>
-<script src="js/render/entity/Path.js"></script>
-<script src="js/render/entity/Paths.js"></script>
-<script src="js/render/control/AnimationStudio.js"></script>
-<script src="js/render/control/AnimationDirector.js"></script>
-<script src="js/render/entity/Sprite.js"></script>
-<script src="js/render/entity/Sprites.js"></script>
-<script src="js/render/api/StageDirector.js"></script>
-<script src="js/render/control/MotionDirector.js"></script>
-<script src="js/render/control/MotionStudio.js"></script>
-<script src="js/render/api/Transition.js"></script>
+<script src="js/render/intern/entity/CanvasText.js"></script>
+<script src="js/render/intern/entity/Drawable.js"></script>
+<script src="js/render/intern/entity/Drawables.js"></script>
+<script src="js/render/intern/entity/Path.js"></script>
+<script src="js/render/intern/entity/Paths.js"></script>
+<script src="js/render/intern/AnimationStudio.js"></script>
+<script src="js/render/intern/AnimationDirector.js"></script>
+<script src="js/render/intern/entity/Sprite.js"></script>
+<script src="js/render/intern/entity/Sprites.js"></script>
+<script src="js/render/StageDirector.js"></script>
+<script src="js/render/intern/MotionDirector.js"></script>
+<script src="js/render/intern/MotionStudio.js"></script>
+<script src="js/render/Transition.js"></script>
 <script src="js/scene/GetReady.js"></script>
 <script src="js/scene/Intro.js"></script>
 <script src="js/scene/KillScreen.js"></script>
@@ -45,9 +41,9 @@
 <script src="js/screen/ResizeHandler.js"></script>
 <script src="js/screen/ScreenSizer.js"></script>
 <script src="js/screen/ResizeBus.js"></script>
-<script src="js/render/entity/SubImage.js"></script>
-<script src="js/render/control/AtlasMapper.js"></script>
-<script src="js/render/control/Renderer.js"></script>
+<script src="js/render/intern/entity/SubImage.js"></script>
+<script src="js/render/intern/AtlasMapper.js"></script>
+<script src="js/render/intern/Renderer.js"></script>
 <script src="js/screen/SimpleLoadingScreen.js"></script>
 <script src="js/net/ResourceLoader.js"></script>
 <script src="js/GameLoop.js"></script>
