--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,8 @@
 <body>
 <canvas id="screen" width="100" height="100"></canvas>
 
-<script src="js/scene/ScreenShaker.js"></script>
+<script src="js/scene/control/LevelGenerator.js"></script>
+<script src="js/scene/control/ScreenShaker.js"></script>
 <script src="js/platform/UniversalTranslator.js"></script>
 <script src="js/platform/addFontToDOM.js"></script>
 <script src="js/platform/requestAnimationFrame.js"></script>
