--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
 <body>
 <canvas id="screen" width="100" height="100"></canvas>
 
+<script src="js/scene/control/Odometer.js"></script>
 <script src="js/scene/control/ScreenShaker.js"></script>
 <script src="js/platform/UniversalTranslator.js"></script>
 <script src="js/platform/addFontToDOM.js"></script>
