split generate level into render and control

--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,8 @@
 <script src="js/render/intern/MotionDirector.js"></script>
 <script src="js/render/intern/MotionStudio.js"></script>
 <script src="js/render/Transition.js"></script>
+<script src="js/scene/control/range.js"></script>
+<script src="js/scene/control/FlyingObstaclesDrawHelper.js"></script>
 <script src="js/scene/control/LevelGenerator.js"></script>
 <script src="js/scene/GetReady.js"></script>
 <script src="js/scene/Intro.js"></script>
