split odometer into model and rendering / view part

--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
 <canvas id="screen" width="100" height="100"></canvas>
 
 <script src="js/scene/control/CollectView.js"></script>
+<script src="js/scene/control/OdometerView.js"></script>
 <script src="js/scene/control/Odometer.js"></script>
 <script src="js/scene/control/ScreenShaker.js"></script>
 <script src="js/platform/UniversalTranslator.js"></script>
