--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
 <body>
 <canvas id="screen" width="100" height="100"></canvas>
 
+<script src="js/scene/control/ScoreView.js"></script>
 <script src="js/scene/control/CollectView.js"></script>
 <script src="js/scene/control/OdometerView.js"></script>
 <script src="js/scene/control/Odometer.js"></script>
