credits screen scene

--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,7 @@
 <script src="js/render/intern/MotionDirector.js"></script>
 <script src="js/render/intern/MotionStudio.js"></script>
 <script src="js/render/Transition.js"></script>
+<script src="js/scene/Credits.js"></script>
 <script src="js/scene/control/range.js"></script>
 <script src="js/scene/control/ObstaclesView.js"></script>
 <script src="js/scene/control/LevelGenerator.js"></script>
