in game tutorial scene

--- a/www/index.html
+++ b/www/index.html
@@ -44,6 +44,7 @@
 <script src="js/scene/GetReady.js"></script>
 <script src="js/scene/Intro.js"></script>
 <script src="js/scene/KillScreen.js"></script>
+<script src="js/scene/InGameTutorial.js"></script>
 <script src="js/scene/PlayGame.js"></script>
 <script src="js/scene/PostGame.js"></script>
 <script src="js/scene/PreGame.js"></script>
