--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,9 @@
 <body>
 <canvas id="screen" width="100" height="100"></canvas>
 
+<script src="js/scene/control/Repository.js"></script>
+<script src="js/scene/control/changePath.js"></script>
+<script src="js/scene/control/changeCoords.js"></script>
 <script src="js/scene/control/calcScreenConst.js"></script>
 <script src="js/scene/control/EnergyStateMachine.js"></script>
 <script src="js/scene/control/GameWorld.js"></script>
