--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
 <script src="js/scene/control/position/CountHelper.js"></script>
 <script src="js/scene/control/position/BackGroundHelper.js"></script>
 <script src="js/scene/control/position/SpeedStripesHelper.js"></script>
+<script src="js/scene/control/position/GameStuffHelper.js"></script>
 <script src="js/scene/control/EnergyStateMachine.js"></script>
 <script src="js/scene/control/GameWorld.js"></script>
 <script src="js/scene/control/CanvasCollisionDetector.js"></script>
