makes pre game scene resizeable

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
 <script src="js/scene/control/Repository.js"></script>
 <script src="js/scene/control/position/changePath.js"></script>
 <script src="js/scene/control/position/changeCoords.js"></script>
+<script src="js/scene/control/position/changeTouchable.js"></script>
 <script src="js/scene/control/position/calcScreenConst.js"></script>
 <script src="js/scene/control/position/widthHalf.js"></script>
 <script src="js/scene/control/position/heightHalf.js"></script>
