resize in game tutorial scene

--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,9 @@
 <script src="js/scene/control/position/heightHalf.js"></script>
 <script src="js/scene/control/position/__400.js"></script>
 <script src="js/scene/control/position/getTopRaster.js"></script>
+<script src="js/scene/control/position/ShieldsHelper.js"></script>
+<script src="js/scene/control/position/EnergyBarHelper.js"></script>
+<script src="js/scene/control/position/LifeHelper.js"></script>
 <script src="js/scene/control/position/CountHelper.js"></script>
 <script src="js/scene/control/position/ShipHelper.js"></script>
 <script src="js/scene/control/position/FireHelper.js"></script>
