--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,9 @@
 <body>
 <canvas id="screen" width="100" height="100"></canvas>
 
+<script src="js/lib/howler.js"></script>
+<script src="js/audio/SoundFilesManager.js"></script>
+<script src="js/audio/SoundSpriteManager.js"></script>
 <script src="js/scene/control/Repository.js"></script>
 <script src="js/scene/control/position/changePath.js"></script>
 <script src="js/scene/control/position/changeCoords.js"></script>
