things move for the first time

--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,7 @@
 <script src="js/scene/control/OdometerView.js"></script>
 <script src="js/scene/control/Odometer.js"></script>
 <script src="js/scene/control/ScreenShaker.js"></script>
+<script src="js/scene/control/WindowView.js"></script>
 <script src="js/platform/UniversalTranslator.js"></script>
 <script src="js/platform/addFontToDOM.js"></script>
 <script src="js/platform/requestAnimationFrame.js"></script>
@@ -56,29 +57,28 @@
 <script src="js/render/intern/entity/Sprite.js"></script>
 <script src="js/render/intern/entity/Sprites.js"></script>
 <script src="js/render/StageDirector.js"></script>
+<script src="js/render/ResizableStageDirector.js"></script>
 <script src="js/render/intern/MotionDirector.js"></script>
 <script src="js/render/intern/MotionStudio.js"></script>
 <script src="js/render/Transition.js"></script>
-<script src="js/scene/Credits.js"></script>
 <script src="js/scene/control/range.js"></script>
-<script src="js/scene/control/ObstaclesView.js"></script>
-<script src="js/scene/control/LevelGenerator.js"></script>
-<script src="js/scene/GetReady.js"></script>
-<script src="js/scene/Intro.js"></script>
-<script src="js/scene/KillScreen.js"></script>
-<script src="js/scene/InGameTutorial.js"></script>
-<script src="js/scene/PlayGame.js"></script>
-<script src="js/scene/PostGame.js"></script>
-<script src="js/scene/PreGame.js"></script>
-<script src="js/scene/StartingPosition.js"></script>
-<script src="js/scene/Tutorial.js"></script>
+<script src="js/scene/control/FireFighterView.js"></script>
+<script src="js/scene/control/Level.js"></script>
+<script src="js/scene/control/PeopleView.js"></script>
+<script src="js/scene/control/TimeView.js"></script>
+<script src="js/scene/control/PropertyManagement.js"></script>
+<script src="js/scene/FireGame.js"></script>
 <script src="js/scene/SceneManager.js"></script>
 <script src="js/screen/ResizeHandler.js"></script>
 <script src="js/screen/ScreenSizer.js"></script>
 <script src="js/screen/ResizeBus.js"></script>
 <script src="js/render/intern/entity/SubImage.js"></script>
-<script src="js/render/intern/AtlasMapper.js"></script>
-<script src="js/render/intern/Renderer.js"></script>
+<script src="js/render/intern/entity/Texture.js"></script>
+<script src="js/render/TextureCache.js"></script>
+<script src="js/render/AtlasMapper.js"></script>
+<script src="js/render/intern/wrapText.js"></script>
+<script src="js/render/intern/ImageRenderer.js"></script>
+<script src="js/render/intern/AtlasRenderer.js"></script>
 <script src="js/screen/SimpleLoadingScreen.js"></script>
 <script src="js/net/ResourceLoader.js"></script>
 <script src="js/GameLoop.js"></script>
