--- a/www/onscreen-debug.html
+++ b/www/onscreen-debug.html
@@ -76,8 +76,8 @@
 <script src="js/screen/ScreenSizer.js"></script>
 <script src="js/screen/ResizeBus.js"></script>
 <script src="js/render/intern/entity/SubImage.js"></script>
-<script src="js/render/intern/AtlasMapper.js"></script>
-<script src="js/render/intern/Renderer.js"></script>
+<script src="js/render/AtlasMapper.js"></script>
+<script src="js/render/intern/AtlasRenderer.js"></script>
 <script src="js/screen/SimpleLoadingScreen.js"></script>
 <script src="js/net/ResourceLoader.js"></script>
 <script src="js/GameLoop.js"></script>
