window management + resizable stage director extended to handle input stuff

--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,7 @@
 <script src="js/scene/control/OdometerView.js"></script>
 <script src="js/scene/control/Odometer.js"></script>
 <script src="js/scene/control/ScreenShaker.js"></script>
+<script src="js/scene/control/WindowHelper.js"></script>
 <script src="js/scene/control/WindowView.js"></script>
 <script src="js/platform/UniversalTranslator.js"></script>
 <script src="js/platform/addFontToDOM.js"></script>
