introduced round trips to the motion api

--- a/www/index.html
+++ b/www/index.html
@@ -24,9 +24,11 @@
 <script src="js/scene/control/position/__400.js"></script>
 <script src="js/scene/control/position/getTopRaster.js"></script>
 <script src="js/scene/control/CanvasCollisionDetector.js"></script>
+<script src="js/render/intern/CanvasImageCollisionDetector.js"></script>
 <script src="js/scene/control/ScreenShaker.js"></script>
 <script src="js/scene/control/WindowHelper.js"></script>
 <script src="js/scene/control/WindowView.js"></script>
+<script src="js/scene/control/bootStrapDrawables.js"></script>
 <script src="js/platform/UniversalTranslator.js"></script>
 <script src="js/platform/addFontToDOM.js"></script>
 <script src="js/platform/requestAnimationFrame.js"></script>
