you can play 1st level

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,9 @@
 <script src="js/scene/control/position/heightHalf.js"></script>
 <script src="js/scene/control/position/__400.js"></script>
 <script src="js/scene/control/position/getTopRaster.js"></script>
+<script src="js/scene/control/position/fontSize_15.js"></script>
+<script src="js/scene/control/position/fontSize_10.js"></script>
+<script src="js/scene/control/position/fontSize_30.js"></script>
 <script src="js/scene/control/CanvasCollisionDetector.js"></script>
 <script src="js/render/intern/CanvasImageCollisionDetector.js"></script>
 <script src="js/scene/control/ScreenShaker.js"></script>
@@ -52,12 +55,16 @@
 <script src="js/render/intern/MotionDirector.js"></script>
 <script src="js/render/intern/MotionStudio.js"></script>
 <script src="js/render/Transition.js"></script>
+<script src="js/scene/control/FireFighterHelper.js"></script>
 <script src="js/scene/control/range.js"></script>
 <script src="js/scene/control/Level.js"></script>
 <script src="js/scene/control/PeopleView.js"></script>
 <script src="js/scene/control/TimeView.js"></script>
 <script src="js/scene/control/WindowPusher.js"></script>
 <script src="js/scene/control/PropertyManagement.js"></script>
+<script src="js/scene/GameOver.js"></script>
+<script src="js/scene/NextFire.js"></script>
+<script src="js/scene/Ready.js"></script>
 <script src="js/scene/FireGame.js"></script>
 <script src="js/scene/SceneManager.js"></script>
 <script src="js/screen/ResizeHandler.js"></script>
