--- a/www/index.html
+++ b/www/index.html
@@ -61,7 +61,9 @@
 <script src="js/scene/control/PeopleView.js"></script>
 <script src="js/scene/control/TimeView.js"></script>
 <script src="js/scene/control/WindowPusher.js"></script>
+<script src="js/scene/control/LevelModel.js"></script>
 <script src="js/scene/control/LevelGenerator.js"></script>
+<script src="js/scene/YouWon.js"></script>
 <script src="js/scene/GameOver.js"></script>
 <script src="js/scene/NextFire.js"></script>
 <script src="js/scene/Ready.js"></script>
