making it 4k ready going over scene by scene

--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
 <canvas id="screen" width="100" height="100"></canvas>
 
 <script src="js/lib/howler.js"></script>
+<script src="js/net/resolveAtlasPaths.js"></script>
 <script src="js/audio/SoundFilesManager.js"></script>
 <script src="js/audio/SoundSpriteManager.js"></script>
 <script src="js/scene/control/Repository.js"></script>
@@ -71,7 +72,6 @@
 <script src="js/scene/PostGame.js"></script>
 <script src="js/scene/PreGame.js"></script>
 <script src="js/scene/StartingPosition.js"></script>
-<script src="js/scene/Tutorial.js"></script>
 <script src="js/scene/SceneManager.js"></script>
 <script src="js/screen/ResizeHandler.js"></script>
 <script src="js/screen/ScreenSizer.js"></script>
