--- a/www/index.html
+++ b/www/index.html
@@ -52,6 +52,11 @@
 <script src="js/render/intern/entity/Drawables.js"></script>
 <script src="js/render/intern/entity/Path.js"></script>
 <script src="js/render/intern/entity/Paths.js"></script>
+<script src="js/render/intern/entity/Animation.js"></script>
+<script src="js/render/intern/entity/Animations.js"></script>
+<script src="js/render/intern/AnimationStudio.js"></script>
+<script src="js/render/intern/AnimationDirector.js"></script>
+<script src="js/render/intern/AnimationAssistant.js"></script>
 <script src="js/render/intern/SpriteAnimationStudio.js"></script>
 <script src="js/render/intern/SpriteAnimationDirector.js"></script>
 <script src="js/render/intern/entity/Sprite.js"></script>
