introduces bootstrapping of input listeners and canvas creation and composition of this listeners (cherry picked from commit ffeee1e)

--- a/www/onscreen-debug.html
+++ b/www/onscreen-debug.html
@@ -43,8 +43,8 @@
 <script src="js/platform/requestAnimationFrame.js"></script>
 <script src="js/platform/BrowserOracle.js"></script>
 <script src="js/platform/FullScreenController.js"></script>
-<script src="js/input/PushReleaseController.js"></script>
-<script src="js/input/TapController.js"></script>
+<script src="js/input/PushReleaseHandler.js"></script>
+<script src="js/input/TapHandler.js"></script>
 <script src="js/render/intern/entity/CanvasText.js"></script>
 <script src="js/render/intern/entity/Drawable.js"></script>
 <script src="js/render/intern/entity/Drawables.js"></script>
