--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-<canvas id="screen" width="100" height="100"></canvas>
 
 <script src="js/lib/howler.js"></script>
 <script src="js/render/intern/measureText.js"></script>
@@ -37,8 +36,10 @@
 <script src="js/platform/FullScreenController.js"></script>
 <script src="js/input/entity/Touchable.js"></script>
 <script src="js/input/entity/Touchables.js"></script>
-<script src="js/input/PushReleaseController.js"></script>
-<script src="js/input/TapController.js"></script>
+<script src="js/input/isHit.js"></script>
+<script src="js/input/DragHandler.js"></script>
+<script src="js/input/PushReleaseHandler.js"></script>
+<script src="js/input/TapHandler.js"></script>
 <script src="js/render/intern/entity/CanvasText.js"></script>
 <script src="js/render/intern/entity/Drawable.js"></script>
 <script src="js/render/intern/entity/Drawables.js"></script>
@@ -72,6 +73,13 @@
 <script src="js/screen/SimpleLoadingScreen.js"></script>
 <script src="js/net/ResourceLoader.js"></script>
 <script src="js/GameLoop.js"></script>
+<script src="js/scene/MainGame.js"></script>
+<script src="js/App.js"></script>
+<script src="js/bootstrap/installCanvas.js"></script>
+<script src="js/bootstrap/installDragNDrop.js"></script>
+<script src="js/bootstrap/installResize.js"></script>
+<script src="js/bootstrap/installTap.js"></script>
+<script src="js/bootstrap/bootstrapResponsiveWithDragAndDrop.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
