refactored the whole bootstrapping & app composition (cherry picked from commit b6130a5)

--- a/www/index.html
+++ b/www/index.html
@@ -37,9 +37,14 @@
 <script src="js/input/entity/Touchable.js"></script>
 <script src="js/input/entity/Touchables.js"></script>
 <script src="js/input/isHit.js"></script>
+<script src="js/input/entity/GamePad.js"></script>
+<script src="js/input/entity/Key.js"></script>
 <script src="js/input/DragHandler.js"></script>
 <script src="js/input/PushReleaseHandler.js"></script>
 <script src="js/input/TapHandler.js"></script>
+<script src="js/input/KeyPushReleaseHandler.js"></script>
+<script src="js/input/KeyHandler.js"></script>
+<script src="js/input/GamePadHandler.js"></script>
 <script src="js/render/intern/entity/CanvasText.js"></script>
 <script src="js/render/intern/entity/Drawable.js"></script>
 <script src="js/render/intern/entity/Drawables.js"></script>
@@ -61,8 +66,9 @@
 <script src="js/render/Transition.js"></script>
 <script src="js/scene/control/range.js"></script>
 <script src="js/scene/SceneManager.js"></script>
-<script src="js/screen/ResizeHandler.js"></script>
-<script src="js/screen/ResizeBus.js"></script>
+<script src="js/bootstrap/installMyScenes.js"></script>
+<script src="js/app/GameLoop.js"></script>
+<script src="js/bootstrap/app/installLoop.js"></script>
 <script src="js/render/intern/entity/SubImage.js"></script>
 <script src="js/render/intern/entity/Texture.js"></script>
 <script src="js/render/TextureCache.js"></script>
@@ -70,16 +76,24 @@
 <script src="js/render/intern/wrapText.js"></script>
 <script src="js/render/intern/ImageRenderer.js"></script>
 <script src="js/render/intern/AtlasRenderer.js"></script>
+<script src="js/bootstrap/app/StageFactory.js"></script>
+<script src="js/bootstrap/app/AtlasResourceHelper.js"></script>
+<script src="js/bootstrap/app/ImageResourceHelper.js"></script>
+<script src="js/bootstrap/MyGameResources.js"></script>
+<script src="js/screen/ResizeHandler.js"></script>
+<script src="js/screen/ResizeBus.js"></script>
 <script src="js/screen/SimpleLoadingScreen.js"></script>
 <script src="js/net/ResourceLoader.js"></script>
-<script src="js/GameLoop.js"></script>
-<script src="js/scene/MainGame.js"></script>
-<script src="js/App.js"></script>
-<script src="js/bootstrap/installCanvas.js"></script>
-<script src="js/bootstrap/installDragNDrop.js"></script>
-<script src="js/bootstrap/installResize.js"></script>
-<script src="js/bootstrap/installTap.js"></script>
-<script src="js/bootstrap/bootstrapResponsiveWithDragAndDrop.js"></script>
+<script src="js/bootstrap/global/installCanvas.js"></script>
+<script src="js/bootstrap/global/installPushRelease.js"></script>
+<script src="js/bootstrap/global/installResize.js"></script>
+<script src="js/bootstrap/global/installTap.js"></script>
+<script src="js/bootstrap/global/installKeyBoard.js"></script>
+<script src="js/bootstrap/global/installGamePad.js"></script>
+<script src="js/bootstrap/global/installKeyPushRelease.js"></script>
+<script src="js/bootstrap/global/installDragNDrop.js"></script>
+<script src="js/app/App.js"></script>
+<script src="js/bootstrap/Bootstrapper.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
