--- a/www/onscreen-debug.html
+++ b/www/onscreen-debug.html
@@ -80,8 +80,8 @@
 <script src="js/render/intern/AtlasRenderer.js"></script>
 <script src="js/screen/SimpleLoadingScreen.js"></script>
 <script src="js/net/ResourceLoader.js"></script>
-<script src="js/GameLoop.js"></script>
-<script src="js/App.js"></script>
+<script src="js/app/GameLoop.js"></script>
+<script src="js/app/App.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
