api core changes and improvements, basic moving with resizing (cherry picked from commit ef776fd)

--- a/www/index.html
+++ b/www/index.html
@@ -18,14 +18,39 @@
 <script src="js/resizeutils/changeCoords.js"></script>
 <script src="js/resizeutils/changeTouchable.js"></script>
 <script src="js/resizeutils/fetchDrawableIntoTouchable.js"></script>
+
 <script src="js/scene/position/calcScreenConst.js"></script>
-<script src="js/scene/position/width/widthHalf.js"></script>
-<script src="js/scene/position/height/heightHalf.js"></script>
+<script src="js/scene/position/add.js"></script>
+<script src="js/scene/position/changeSign.js"></script>
+<script src="js/scene/position/subtract.js"></script>
+<script src="js/scene/position/zero.js"></script>
+
 <script src="js/scene/position/height/__400.js"></script>
 <script src="js/scene/position/height/getTopRaster.js"></script>
-<script src="js/scene/position/size/fontSize_15.js"></script>
+<script src="js/scene/position/height/height.js"></script>
+<script src="js/scene/position/height/heightFifth.js"></script>
+<script src="js/scene/position/height/heightFourFifth.js"></script>
+<script src="js/scene/position/height/heightHalf.js"></script>
+<script src="js/scene/position/height/heightQuarter.js"></script>
+<script src="js/scene/position/height/heightThird.js"></script>
+<script src="js/scene/position/height/heightThreeFifth.js"></script>
+<script src="js/scene/position/height/heightThreeQuarter.js"></script>
+<script src="js/scene/position/height/heightTwoFifth.js"></script>
+<script src="js/scene/position/height/heightTwoThird.js"></script>
+
+<script src="js/scene/position/size/fontSize_5.js"></script>
 <script src="js/scene/position/size/fontSize_10.js"></script>
+<script src="js/scene/position/size/fontSize_15.js"></script>
 <script src="js/scene/position/size/fontSize_30.js"></script>
+<script src="js/scene/position/size/fontSize_60.js"></script>
+
+<script src="js/scene/position/width/width.js"></script>
+<script src="js/scene/position/width/widthHalf.js"></script>
+<script src="js/scene/position/width/widthQuarter.js"></script>
+<script src="js/scene/position/width/widthThird.js"></script>
+<script src="js/scene/position/width/widthThreeQuarter.js"></script>
+<script src="js/scene/position/width/widthTwoThird.js"></script>
+
 <script src="js/scene/viewhelper/ShieldsHelper.js"></script>
 <script src="js/scene/viewhelper/EnergyBarHelper.js"></script>
 <script src="js/scene/viewhelper/LifeHelper.js"></script>
@@ -34,7 +59,7 @@
 <script src="js/scene/viewhelper/FireHelper.js"></script>
 <script src="js/scene/viewhelper/CountHelper.js"></script>
 <script src="js/scene/viewhelper/BackGroundHelper.js"></script>
-<script src="js/scene/viewhelper/SpeedStripesHelper.js"></script>
+<script src="js/scene/viewhelper/drawSpeedStripes.js"></script>
 <script src="js/scene/viewhelper/GameStuffHelper.js"></script>
 <script src="js/scene/component/EnergyStateMachine.js"></script>
 <script src="js/scene/component/GameWorld.js"></script>
@@ -103,6 +128,7 @@
 <script src="js/render/intern/wrapText.js"></script>
 <script src="js/render/intern/ImageRenderer.js"></script>
 <script src="js/render/intern/AtlasRenderer.js"></script>
+<script src="js/render/intern/CallbackTimer.js"></script>
 <script src="js/bootstrap/app/StageFactory.js"></script>
 <script src="js/bootstrap/app/AtlasResourceHelper.js"></script>
 <script src="js/bootstrap/app/ImageResourceHelper.js"></script>
